Top Banner Added

--- a/index.html
+++ b/index.html
@@ -35,5 +35,40 @@
 
     <title>Football Pedia</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Top Banner  -->
+    <header>
+      <section class="top-banner">
+        <div class="top-banner-left">
+          <h1>
+            Cristiano Ronaldo could extend Man United contract - Erik ten Hag
+          </h1>
+          <p>
+            Ten Hag said he is planning to have the 37-year-old in his squad
+            next season. When asked whether he could stay at the club beyond
+            that, the United boss said it is a possibility -- particularly
+            because he is under pressure to deliver immediate success.
+          </p>
+          <button class="learn-more-button">
+            <span
+              ><a
+                href="https://www.espn.in/football/soccer-transfers/story/4702827/cristiano-ronaldo-could-extend-man-united-contract-erik-ten-hag"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Learn More</a
+              ></span
+            >
+          </button>
+        </div>
+        <div class="top-banner-right">
+          <img src="images/Banner/cr7-2.png" alt="" />
+        </div>
+      </section>
+    </header>
+    <!-- Main Section  -->
+    <main class="match-info">
+      <section class="navigation"></section>
+      <section class="blogs"></section>
+    </main>
+  </body>
 </html>
