Blogs & Navigation Added

--- a/index.html
+++ b/index.html
@@ -67,8 +67,159 @@
     </header>
     <!-- Main Section  -->
     <main class="match-info">
-      <section class="navigation"></section>
-      <section class="blogs"></section>
+      <!-- Navigation Bars  -->
+      <section class="navigation">
+        <a href="upcomming.html"
+          ><button class="nav-1">Upcomming Matches</button>
+        </a>
+        <a
+          href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <button class="nav-2">World Cup Groups</button></a
+        >
+
+        <a href="index.html"><button class="nav-3">Blogs</button></a>
+      </section>
+      <!-- Blogs Section  -->
+      <section class="blogs">
+        <section class="blog">
+          <img src="images/Blogs/blog-1.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-2.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-3.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-4.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-5.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-6.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-7.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-8.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="blog">
+          <img src="images/Blogs/blog-9.png" alt="" />
+          <button class="transfer-button">Transfer</button>
+          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+          <div class="clock-comment">
+            <div class="icons">
+              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+            </div>
+            <div class="icons">
+              <p>
+                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+              </p>
+            </div>
+          </div>
+        </section>
+      </section>
     </main>
   </body>
 </html>
