--- a/index.html
+++ b/index.html
@@ -66,160 +66,222 @@
       </section>
     </header>
     <!-- Main Section  -->
-    <main class="match-info">
+    <main>
       <!-- Navigation Bars  -->
-      <section class="navigation">
-        <a href="upcomming.html"
-          ><button class="nav-1">Upcomming Matches</button>
-        </a>
-        <a
-          href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <button class="nav-2">World Cup Groups</button></a
-        >
+      <article class="match-info">
+        <section class="navigation">
+          <a href="upcomming.html"
+            ><button class="nav-1">Upcomming Matches</button>
+          </a>
+          <a
+            href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <button class="nav-2">World Cup Groups</button></a
+          >
 
-        <a href="index.html"><button class="nav-3">Blogs</button></a>
-      </section>
-      <!-- Blogs Section  -->
-      <section class="blogs">
-        <section class="blog">
-          <img src="images/Blogs/blog-1.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
+          <a href="index.html"><button class="nav-3">Blogs</button></a>
         </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-2.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
+        <!-- Blogs Section  -->
+        <section class="blogs">
+          <section class="blog">
+            <img src="images/Blogs/blog-1.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
             </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-2.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
             </div>
-          </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-3.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-4.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-5.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-6.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-7.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-8.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-9.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
         </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-3.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-4.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-5.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-6.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-7.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-8.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="blog">
-          <img src="images/Blogs/blog-9.png" alt="" />
-          <button class="transfer-button">Transfer</button>
-          <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-          <div class="clock-comment">
-            <div class="icons">
-              <p><i class="fa-regular fa-clock icon"></i><span>1.5 hr</span></p>
-            </div>
-            <div class="icons">
-              <p>
-                <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
-              </p>
-            </div>
-          </div>
-        </section>
-      </section>
+      </article>
+      <div class="view-more-button">
+        <button class="learn-more-button">
+          <span
+            ><a href="" target="" rel="noopener noreferrer">View More</a></span
+          >
+        </button>
+      </div>
     </main>
+    <!-- Footer Section  -->
+    <footer>
+      <section class="footer-info">
+        <h1>Goal</h1>
+        <hr />
+        <div class="important-links">
+          <a href="">Contact Us</a>
+          <a href="">Terms of Service</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Privacy Settings</a>
+          <a href="">Football Pedia App</a>
+          <a href="">Football Pedia Live</a>
+        </div>
+        <div class="social-media">
+          <a
+            href="https://www.facebook.com/fifa"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-facebook social-icon"></i
+          ></a>
+          <a
+            href="https://twitter.com/FIFAcom"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-twitter social-icon"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/fifa"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-youtube social-icon"></i
+          ></a>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
