Mobile Device Responsiveness Updated

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       <section class="top-banner">
         <div class="top-banner-left">
           <h1>
-            Cristiano Ronaldo could extend Man United contract - Erik ten Hag
+            Cristiano Ronaldo could extend Man United contract <br />
+            - Erik ten Hag
           </h1>
           <p>
             Ten Hag said he is planning to have the 37-year-old in his squad
