Tablet Device Responsiveness Added Updated

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               </div>
             </div>
           </section>
-          <section class="blog">
+          <section class="blog blog-9">
             <img src="images/Blogs/blog-9.png" alt="" />
             <button class="transfer-button">Transfer</button>
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
