Upcomming Match Page Added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <body>
     <!-- Top Banner  -->
     <header>
+      <!-- Top Banner Left Part  -->
       <section class="top-banner">
         <div class="top-banner-left">
           <h1>
@@ -61,6 +62,7 @@
             >
           </button>
         </div>
+        <!-- Top Banner Right Part  -->
         <div class="top-banner-right">
           <img src="images/Banner/cr7-2.png" alt="" />
         </div>
@@ -241,6 +243,9 @@
           </section>
         </section>
       </article>
+      <!-- Blogs Ended -->
+
+      <!-- View More Button For Tablet Devices -->
       <div class="view-more-button">
         <button class="learn-more-button">
           <span
@@ -254,6 +259,7 @@
       <section class="footer-info">
         <h1>Goal</h1>
         <hr />
+        <!-- Different Page Links -->
         <div class="important-links">
           <a href="">Contact Us</a>
           <a href="">Terms of Service</a>
@@ -262,6 +268,7 @@
           <a href="">Football Pedia App</a>
           <a href="">Football Pedia Live</a>
         </div>
+        <!-- Social Media Link  -->
         <div class="social-media">
           <a
             href="https://www.facebook.com/fifa"
