--- a/upcomming.html
+++ b/upcomming.html
@@ -4,9 +4,292 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <!-- Font Awesome Kit -->
+    <script
+      src="https://kit.fontawesome.com/702363be04.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Fav Icon  -->
+    <link
+      rel="shortcut icon"
+      href="images/icons/futbol-regular.svg"
+      type="image/x-icon"
+    />
+
+    <!-- CSS Stylesheet Link  -->
+    <link
+      rel="stylesheet"
+      href="styles/upcomming.css
+    "
+    />
+
+    <title>Football Pedia</title>
   </head>
   <body>
-    <h2>yo yo</h2>
+    <!-- Top Banner  -->
+    <header>
+      <!-- Top Banner Left Part  -->
+      <section class="top-banner">
+        <div class="top-banner-left">
+          <h1>
+            Cristiano Ronaldo could extend Man United contract <br />
+            - Erik ten Hag
+          </h1>
+          <p>
+            Ten Hag said he is planning to have the 37-year-old in his squad
+            next season. When asked whether he could stay at the club beyond
+            that, the United boss said it is a possibility -- particularly
+            because he is under pressure to deliver immediate success.
+          </p>
+          <button class="learn-more-button">
+            <span
+              ><a
+                href="https://www.espn.in/football/soccer-transfers/story/4702827/cristiano-ronaldo-could-extend-man-united-contract-erik-ten-hag"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Learn More</a
+              ></span
+            >
+          </button>
+        </div>
+        <!-- Top Banner Right Part  -->
+        <div class="top-banner-right">
+          <img src="images/Banner/cr7-2.png" alt="" />
+        </div>
+      </section>
+    </header>
+    <!-- Main Section  -->
+    <main>
+      <!-- Navigation Bars  -->
+      <article class="match-info">
+        <section class="navigation">
+          <a href="upcomming.html"
+            ><button class="nav-1">Upcomming Matches</button>
+          </a>
+          <a
+            href="https://www.fifa.com/fifaplus/en/articles/qatar-2022-all-qualified-teams-groups-dates-match-schedule-tickets-more"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <button class="nav-2">World Cup Groups</button></a
+          >
+
+          <a href="index.html"><button class="nav-3">Blogs</button></a>
+        </section>
+        <!-- Blogs Section  -->
+        <section class="blogs">
+          <section class="blog">
+            <img src="images/Blogs/blog-1.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-2.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-3.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-4.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-5.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-6.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-7.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <img src="images/Blogs/blog-8.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="blog blog-9">
+            <img src="images/Blogs/blog-9.png" alt="" />
+            <button class="transfer-button">Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="clock-comment">
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-clock icon"></i><span>1.5 hr</span>
+                </p>
+              </div>
+              <div class="icons">
+                <p>
+                  <i class="fa-regular fa-comment-dots icon"></i><span>23</span>
+                </p>
+              </div>
+            </div>
+          </section>
+        </section>
+      </article>
+      <!-- Blogs Ended -->
+
+      <!-- View More Button For Tablet Devices -->
+      <div class="view-more-button">
+        <button class="learn-more-button">
+          <span
+            ><a href="" target="" rel="noopener noreferrer">View More</a></span
+          >
+        </button>
+      </div>
+    </main>
+    <!-- Footer Section  -->
+    <footer>
+      <section class="footer-info">
+        <h1>Goal</h1>
+        <hr />
+        <!-- Different Page Links -->
+        <div class="important-links">
+          <a href="">Contact Us</a>
+          <a href="">Terms of Service</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Privacy Settings</a>
+          <a href="">Football Pedia App</a>
+          <a href="">Football Pedia Live</a>
+        </div>
+        <!-- Social Media Link  -->
+        <div class="social-media">
+          <a
+            href="https://www.facebook.com/fifa"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-facebook social-icon"></i
+          ></a>
+          <a
+            href="https://twitter.com/FIFAcom"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-twitter social-icon"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/fifa"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fa-brands fa-youtube social-icon"></i
+          ></a>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
